--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -10,12 +10,12 @@
       <div class="form-group">
         <%= f.label :email, class: "control-label col-sm-12"  %>
         <div class="col-sm-12">
-          <%= f.email_field :email, autofocus: true, class: "form-control" %> %>
+          <%= f.email_field :email, autofocus: true, class: "form-control" %>
         </div>
       </div>
 
       <div class="actions col-sm-12">
-        <%= f.submit "Send me reset password instructions", class: "btn btn-lg btn-default btn-block" %>
+        <%= f.submit "Send instructions", class: "btn btn-lg btn-default btn-block" %>
       </div>
     <% end %>
     
