--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,11 @@
       <h2><%= @product.name %></h2>
 
       <p>
+      <strong>Average Rating:</strong> 
+        <span class="rated" data-score="<%= @product.average_rating %>"></span> 
+      </p>
+
+      <p>
         <strong>Teaser:</strong>
         <%= @product.teaser %>
       </p>
@@ -34,6 +39,8 @@
       </p> 
       <% end %>
 
+
+
       <div class="row">
         <% if @product.highest_rating_comment.present? || @product.lowest_rating_comment.present? %>
           <div class="col-sm-12">
@@ -43,29 +50,41 @@
           <div class="col-sm-6">
             <% if @product.highest_rating_comment.user.first_name.present? %>
               <p>
-                <%= @product.highest_rating_comment.user.first_name %> reviewed this product:
+                <em>
+                  <%= @product.highest_rating_comment.user.first_name %>
+                </em> 
+                 reviewed this product:
               </p>
             <% end %>
+            <div class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></div>
             <p>
               <%= @product.highest_rating_comment.body %>
             </p>
           </div>
           <div class="col-sm-6">
+          <% if @product.comments.count >= 2 %>
             <% if @product.lowest_rating_comment.user.first_name.present? %>
               <p>
-                <%= @product.lowest_rating_comment.user.first_name %> reviewed this product:
+                <em>
+                  <%= @product.lowest_rating_comment.user.first_name %> 
+                </em> 
+                 reviewed this product:
               </p>
             <% end %>
+            <div class="rated" data-score="<%= @product.lowest_rating_comment.rating %>"></div>
             <p>
               <%= @product.lowest_rating_comment.body %>
             </p>
+          <% end %>  
           </div>
         <% end %>
       </div>
-
     </div>
   </div>
+  
+  <%= render 'new_comment' %>
 
+  <%= render 'comments' %>
 
 
   
