--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -50,6 +50,7 @@
           <div class="col-sm-6">
             <% if @product.highest_rating_comment.user.first_name.present? %>
               <p>
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                 <em>
                   <%= @product.highest_rating_comment.user.first_name %>
                 </em> 
@@ -65,6 +66,7 @@
           <% if @product.comments.count >= 2 %>
             <% if @product.lowest_rating_comment.user.first_name.present? %>
               <p>
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                 <em>
                   <%= @product.lowest_rating_comment.user.first_name %> 
                 </em> 
